# AI-Agents

./: .gitignore  LICENSE  README.md  enhanced_agent.py  requirements.txt  train_agent.py
AI-Coding-Assistant/: .gitignore  .pre-commit-config.yaml  DEVELOPMENT_NOTES.md  DISCUSSIONS.md  README.md  config.example.json  pyproject.toml  requirements.txt  setup.py
AI-Coding-Assistant/ai_coding_assistant/: main.py
AI-Coding-Assistant/ai_coding_assistant/agents/: agent_manager.py
AI-Coding-Assistant/ai_coding_assistant/context/: context_manager.py  conversation_context_provider.py  file_context_provider.py  repository_context_provider.py
AI-Coding-Assistant/ai_coding_assistant/core/: config.py  engine.py  server.py
AI-Coding-Assistant/ai_coding_assistant/memory/: memory_manager.py
AI-Coding-Assistant/ai_coding_assistant/models/: anthropic_provider.py  model_manager.py  openai_provider.py
AI-Coding-Assistant/ai_coding_assistant/tools/: file_tools.py  search_tools.py  shell_tools.py  tool_registry.py
AI-Coding-Assistant/src/: main.py
AI-Coding-Assistant/src/core/: __init__.py
AI-Coding-Assistant/src/memory/: __init__.py
AI-Coding-Assistant/src/planning/: __init__.py
AI-Coding-Assistant/src/security/: __init__.py
AI-Coding-Assistant/src/tools/: __init__.py
AI-Coding-Assistant/src/ui/: __init__.py
Simple-AI-Agent/: README.md  agent.py  autonomous_agent.py  environment.py  main.py  requirements.txt  web_interface.py
Simple-AI-Agent/models/: simple_model.py
Simple-AI-Agent/templates/: index.html
Simple-AI-Agent/utils/: visualization.py
